Adds a new instance variable with imports, does not adequately replace method invocations